Prevent details from overflowing

--- a/testUI/sidebar.css
+++ b/testUI/sidebar.css
@@ -168,6 +168,9 @@
       display: block;
       color: #888;
       font-size: 11px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
